<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_10">

    <TextView
        android:id="@+id/tv_address"
        style="@style/DetailsTextView"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@id/et_address"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/et_address" />

    <EditText
        android:id="@+id/et_address"
        style="@style/DetailsEditText"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toTopOf="parent" />

     <TextView
        android:id="@+id/tv_fuel_supplier"
        style="@style/DetailsTextView"
        android:text="@string/fuel_supplier"
        app:layout_constraintBottom_toBottomOf="@id/et_fuel_supplier"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/et_fuel_supplier" />

    <EditText
        android:id="@+id/et_fuel_supplier"
        style="@style/DetailsEditText"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <TextView
        android:id="@+id/tv_type"
        style="@style/DetailsTextView"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@id/et_type"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/et_type" />

    <EditText
        android:id="@+id/et_type"
        style="@style/DetailsEditText"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/et_fuel_supplier" />

    <TextView
        android:id="@+id/tv_quantity"
        style="@style/DetailsTextView"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="@id/et_quantity"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/et_quantity" />

    <EditText
        android:id="@+id/et_quantity"
        style="@style/DetailsEditText"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/et_type" />

    <TextView
        android:id="@+id/tv_cost"
        style="@style/DetailsTextView"
        android:text="@string/cost"
        app:layout_constraintBottom_toBottomOf="@id/et_cost"
        app:layout_constraintEnd_toEndOf="@id/guide"
        app:layout_constraintTop_toTopOf="@id/et_cost" />

    <EditText
        android:id="@+id/et_cost"
        style="@style/DetailsEditText"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@id/guide"
        app:layout_constraintTop_toBottomOf="@id/et_quantity" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        android:layout_marginRight="@dimen/padding_20"
        android:text="@android:string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cost" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>